k8s/kyverno/policy-check-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: admit-only-signed-images-by-me
spec:
  validationFailureAction: enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: admit-only-signed-images-by-me
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/andypanix*"
          attestors:
            - entries:
                - keyless:
                    subject: "andrea.panisson@sparkfabrik.com"
                    issuer: "https://github.com/login/oauth"
                    rekor:
                      url: https://rekor.sigstore.dev
